fix data, icon, style

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
       href="https://fonts.googleapis.com/css2?family=Space+Mono:wght@400;700&display=swap"
       rel="stylesheet"
     />
+    <link rel="icon" href="./img/searchIcon.png" />
     <link
       rel="stylesheet"
       href="https://use.fontawesome.com/releases/v5.15.4/css/all.css"
@@ -53,7 +54,7 @@
               <span id="nameUser">Name user</span>
               <a id="login" href="" target="_blank">@Login</a>
             </div>
-            <span id="date_joined">Date joined</span>
+            <span id="dateJoined">Date joined</span>
           </div>
           <div class="userBio">
             <span id="bio">Bio user</span>
